@@ -416,4 +416,5 @@
 	* NSH now supports if-then[-else]-fi construct
 	* NSH now supports comments beginning with '#'
 	* NSH now supports commands to inspect and modify memory
+	* NSH cat command now supports multiple files on command line
 
